# RAG-AGENT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-conventions.md  01-config.md  02-data-models.md  03-ingestion.md  04-retrieval.md  05-generation.md  06-memory.md  07-api.md  08-observability.md  09-eval.md
docs/task/: task-0.1-skeleton.md  task-0.2-llm-smoke.md  task-1.1-ingestion.md  task-1.2-retrieval.md  task-1.3-generation-cli.md  task-2.1-eval.md  task-3.1-api.md  task-3.2-ui.md  task-4.1-memory.md  task-4.2-self-rag-langgraph.md  task-5.1-eval-pass.md
eval/: generate_golden_set.py  golden_set.json  run_eval.py
eval/results/opus47-golden-v2/: config_snapshot.json  details.csv  scores.json
scripts/: ask.py  ingest_one.py  test_llm.py
src/: config.py
src/api/: errors.py  main.py  schemas.py
src/api/routes/: __init__.py  history.py  ingest.py  query.py
src/generation/: __init__.py  llm.py  prompts.py  stream.py
src/ingestion/: chunker.py  loaders.py  pipeline.py
src/memory/: models.py  store.py
src/observability/: __init__.py  decorators.py  tracing.py
src/orchestration/: __init__.py
src/retrieval/: __init__.py  bm25.py  hybrid.py  rerank.py  vector.py
tests/: test_bm25.py  test_chunker.py  test_hybrid.py
ui/: __init__.py  app.py
