[project]
name = "ai-learning-companion"
version = "0.1.0"
description = "Local-first RAG and memory assistant"
requires-python = ">=3.11"
dependencies = [
    # LLM SDKs
    "openai>=1.50",
    "cohere>=5.10",

    # RAG framework
    "llama-index>=0.13",
    "llama-index-readers-file>=0.4",  # PDFReader 等
    "langgraph>=0.2",

    # Vector DB
    "qdrant-client>=1.13",

    # Keyword search
    "rank-bm25>=0.2",

    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",

    # Database
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",

    # UI
    "streamlit>=1.40",

    # Observability
    "langfuse>=2.50",
    "loguru>=0.7",

    # Config
    "pydantic-settings>=2.5",
    "pydantic>=2.9",

    # Utils
    "trafilatura>=1.12",        # HTML extraction
    "python-multipart>=0.0.9",  # FastAPI form 用
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
